--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "Leudi Rosario",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-validator": "^6.6.1",
+    "mongoose": "^5.10.6"
   }
 }
