--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "start": ""
+    "start": "node index.js"
   },
   "author": "Leudi Rosario",
   "license": "MIT",
